force-app/main/default/objects/Task_Checklist_Item__c/Task_Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>Checklist items required before task completion and QA/SIT approval</description>
    <label>Task Checklist Item</label>
    <nameField>
        <label>Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>