force-app/main/default/objects/Task_Checklist_Item__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who completed this checklist item</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Completed_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>