force-app/main/default/objects/Task_Checklist_Item__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date when checklist item was completed</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>