force-app/main/default/objects/Task_Checklist_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of checklist item</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>